update devcontainer.json: implement onCreateCommand

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,6 @@
         "bmewburn.vscode-intelephense-client",
         "wayou.vscode-todo-highlight",
         "wordpresstoolbox.wordpress-toolbox"
-    ]
+    ],
+    "onCreateCommand": "apt update && apt upgrade -y && apt install -y git"
 }
